Fixed: Table align and reversed align items

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -82,7 +82,7 @@ body {
 
     div.close {
         display: inline-flex;
-        align-items: center;
+        vertical-align: middle;
         align-self: start;
         font-size: 26px;
         padding: 8px 15px !important;
@@ -361,7 +361,7 @@ input[type="text"]:disabled:hover {
             border: 1px solid white;
             padding: 0px 2px;
             align-items: stretch;
-            align-items: center;
+            vertical-align: middle;
         }
 
         td {
@@ -372,7 +372,7 @@ input[type="text"]:disabled:hover {
                 text-decoration: none;
                 display: inline-flex;
                 align-items: stretch;
-                align-items: center;
+                vertical-align: middle;
 
                 img {
                     height: 24px;
@@ -388,7 +388,7 @@ input[type="text"]:disabled:hover {
         tbody {
             td {
                 padding-top: 0px;
-                align-items: center;
+                vertical-align: middle;
                 border-bottom: 1px solid #f1f1f1 !important;
             }
         }
@@ -415,7 +415,7 @@ input[type="text"]:disabled:hover {
 .w3-btn.icon {
     min-width: 100px;
     display: inline-flex;
-    align-items: center;
+    vertical-align: middle;
 
     span {
         font-size: 16px;
